--- a/potatohead.html
+++ b/potatohead.html
@@ -20,11 +20,11 @@
 			<img id="nose_image" >
 			<img id="eyebrows_image" >
 			<img id="glasses_image" >
-			<img id="hat_image" >
+			<img id="hat_image" src="assets/hat.png">
 			<img id="moustache_image" >
 			<img id="shoes_image" >
 			<img id="cane">
-			<img id="earrings">
+			<img id="earrings" src="assets/earrings.png">
 			<img id="hatflower">
 			<img id="boosters">
 		</div>
